kube_yaml/nodeportService.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <<containerId>>
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: <<containerId>>
    templateVersion: "3"
  name: <<containerId>>-lb
  namespace: <<containerId>>
spec:
  selector:
    app: <<containerId>>
  type: ClusterIP
