kube_yaml/init_template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cluster-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 81
      name: http
      protocol: HTTP
    hosts:
    - DOMAIN
  - port:
      number: 80
      name: http2
      protocol: HTTP
    hosts:
    - DOMAIN
  - port:
      number: 82
      name: http3
      protocol: HTTP
    hosts:
    - DOMAIN
